@startuml
scale 800*800
skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 120
skinparam ranksep 40
hide stereotype
skinparam class {
	BackgroundColor White
	BackgroundColor<<User>> LightBlue
	BackgroundColor<<Card>> LightYellow
}

class Card <<Card>> {
    Integer id
    List <int> [rows][columns]
    Integer price
    Game game
    Player player
}

class Invitation <<Invitation>> {
    Integer id
    Integer id_game
    Player playerInvited
    Player playerWhoInvited
    Boolean isUnderWay
    Boolean isAccepted
    Boolean timeout
    String message
}

class Game <<Game>> {
    Integer id
    String name
    List <int> nums
    List <int> randomList
    Double linePrice
    Double bingoPrice
    Player bingowinner
    Player linewinner
}
Card "has many" --> "isplayed 1" Game

class User <<User>> {
    String username
    String email
    String password
    Boolean admin
}

class Player <<User>> extends User {
    Integer wallet
    Boolean isPlaying
}
Card "playedBy 1" --> "plays 1" Player
Invitation "many" <-- "1" Player : invites
Invitation "1" <-- "1" Player : receives
Invitation "many" --> "1" Game : belongs


class Admin <<User>> extends User {

}
@enduml
